<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.events.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/default_margin"
                android:src="@drawable/star_filled"
                android:tint="@color/textcolor" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:padding="@dimen/default_margin">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_background"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:drawablePadding="@dimen/default_margin"
            android:hint="@string/search_hint"
            android:paddingBottom="@dimen/default_margin"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_button_height"
            android:paddingTop="@dimen/default_margin"
            android:textSize="@dimen/search_text_size" />

        <ImageView
            android:id="@+id/search_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/default_margin"
            android:src="@android:drawable/ic_notification_clear_all"
            android:visibility="gone" />
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshlayout"
        android:layout_width="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/search_layout"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:scrollbars="vertical" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin">

        <TextView
            android:id="@+id/sortby"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
            android:gravity="center"
            android:padding="@dimen/default_margin"
            android:text="@string/sortby"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/api_remaining"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingBottom="@dimen/default_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/api_quota"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/default_text_size" />
    </RelativeLayout>
</RelativeLayout>
