<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.events.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_toLeftOf="@+id/favourite"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/default_margin"
                android:src="@drawable/star_filled"
                android:tint="@color/textcolor" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_image_height"
            android:background="@drawable/placeholder"
            android:padding="@dimen/default_margin" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/desclayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_layout"
        android:layout_marginTop="@dimen/default_margin"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/search_text_size" />

        <View
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/description"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seperator"
            android:padding="@dimen/default_margin" />

        <TextView
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category"
            android:padding="@dimen/default_margin" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/default_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/back"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/default_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/share"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/stats"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/default_margin"
            android:paddingLeft="@dimen/dialogue_margin"
            android:paddingRight="@dimen/dialogue_margin"
            android:paddingTop="@dimen/default_margin"
            android:text="@string/statistics"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

</RelativeLayout>
